# lukasz-pudlo

./: .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.local.yml  manage.py  pyproject.toml
.envs/.local/: .django  .postgres
.envs/.production/: .django.example  .postgres.example
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
config/: celery_app.py  urls.py
config/settings/: base.py  development.py  local.py  production.py  test.py
deploy/hetzner/: docker-compose.yml
docs/plans/: 2026-05-23-website-mvp.md
lukasz_pudlo/pages/: apps.py  urls.py  views.py
lukasz_pudlo/pages/templates/pages/: about.html  contact.html  home.html  portfolio.html  portfolio_tabs.html  project_detail.html
lukasz_pudlo/pages/tests/: test_views.py
lukasz_pudlo/users/: admin.py  apps.py  managers.py  models.py
lukasz_pudlo/users/migrations/: 0001_initial.py
templates/: base.html
