[project]
name = "lukasz_pudlo"
version = "0.1.0"
description = "Personal website for Lukasz Pudlo"
readme = "README.md"
license = { text = "Not open source" }
authors = [{ name = "Lukasz Pudlo" }]
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "argon2-cffi==25.1.0",
  "celery==5.6.3",
  "django==6.0.5",
  "django-allauth[mfa]==65.16.1",
  "django-anymail[postmark]==15.0",
  "django-celery-beat==2.9.0",
  "django-environ==0.13.0",
  "django-model-utils==5.0.0",
  "django-redis==6.0.0",
  "django-tailwind==4.4.2",
  "flower>=2.0.1",
  "gunicorn==26.0.0",
  "hiredis==3.3.1",
  "pillow==12.2.0",
  "psycopg[c]==3.3.4",
  "redis==7.4.0",
  "sentry-sdk==2.60.0",
  "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
  "coverage==7.14.0",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==6.3.0",
  "django-browser-reload==1.21.0",
  "django-extensions==4.1",
  "django-stubs[compatible-mypy]==6.0.4",
  "djlint==1.36.4",
  "factory-boy==3.3.3",
  "ipdb==0.13.13",
  "mypy==2.0.0",
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "pytest-django==4.12.0",
  "pytest-sugar==1.1.1",
  "ruff==0.15.13",
  "watchfiles==1.1.1",
  "werkzeug[watchdog]==3.1.8",
]

[tool.ruff]
extend-exclude = ["*/migrations/*.py", "staticfiles/*"]
line-length = 119

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "BLE", "C4", "C90", "COM", "DJ", "DTZ", "E", "EM", "ERA", "EXE", "F", "FA", "FBT", "FLY", "G", "I", "ICN", "INP", "INT", "ISC", "N", "PERF", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TC", "TID", "TRY", "UP", "W", "YTT"]
ignore = ["RUF012", "S101", "SIM102"]
isort.force-single-line = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = ["tests.py", "test_*.py"]

[tool.coverage.run]
include = ["lukasz_pudlo/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"
